# TerminalImageViewer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  TerminalImageViewer.spec  build.gradle  cats.sh  configure.ac  snapcraft.yaml  terminalimageviewer.rb  tiv.rb  tiv.sh
.github/: dependabot.yml  expired.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md
.github/workflows/: ci.yml  cimg.yml  main.yml  test.yml
cmake/: ConfigureCCache.cmake  ConfigureCXX_Version.cmake  ConfigureThreads.cmake
src/: CImg.h  Makefile  tiv.cpp  tiv_lib.cpp  tiv_lib.h
src/java/: TerminalImageViewer.java  test.cpp
src/main/cpp/: CImg.h  CMakeLists.txt  Makefile  Makefile.am  tiv.cpp
src/main/cpp/cmake/: ConfigureLTO.cmake  ConfigureNinja.cmake
src/main/java/: TerminalImageViewer.java
src/main/java/com/github/stefanhaustein/: TerminalImageViewer.java
tools/: dockcross-cmake-builder.sh  dockcross-make-builder.sh
